[gd_scene load_steps=3 format=4 uid="uid://njc8kw8a0wfs"]

[ext_resource type="PackedScene" uid="uid://q5wh0p6tlawn" path="res://Scenes/Levels/baselevel.tscn" id="1_rcu53"]
[ext_resource type="Script" path="res://Scripts/Levels/enemies_wave.gd" id="2_vg7t8"]

[node name="EnemiesWave" instance=ExtResource("1_rcu53")]
script = ExtResource("2_vg7t8")

[node name="Ground" parent="TileMap" index="1"]
tile_map_data = PackedByteArray("AAAAAP7/AAAOAAgAAAAAAP//AAAOAAgAAAABAP7/AAAOAAgAAAABAP//AAAOAAgAAAACAP7/AAAOAAgAAAACAP//AAAOAAgAAAADAP7/AAAOAAgAAAADAP//AAAOAAgAAAAEAP7/AAAOAAgAAAAEAP//AAAOAAgAAAAFAP7/AAAOAAgAAAAFAP//AAAOAAgAAAAGAP7/AAAOAAgAAAAGAP//AAAOAAgAAAAHAP7/AAAOAAgAAAAHAP//AAAOAAgAAAAIAP7/AAAOAAgAAAAIAP//AAAOAAgAAAAJAP7/AAAOAAgAAAAJAP//AAAOAAgAAAAKAP7/AAAOAAgAAAAKAP//AAAOAAgAAAALAP7/AAAOAAgAAAALAP//AAAOAAgAAAAMAP7/AAAOAAgAAAAMAP//AAAOAAgAAAANAP7/AAAOAAgAAAANAP//AAAOAAgAAAAOAP7/AAAOAAgAAAAOAP//AAAOAAgAAAAPAP7/AAAOAAgAAAAPAP//AAAOAAgAAAAQAP7/AAAOAAgAAAAQAP//AAAOAAgAAAARAP7/AAAOAAgAAAARAP//AAAOAAgAAAASAP7/AAAOAAgAAAASAP//AAAOAAgAAAATAP7/AAAOAAgAAAATAP//AAAOAAgAAAAUAP7/AAAOAAgAAAAUAP//AAAOAAgAAAAVAP7/AAAOAAgAAAAVAP//AAAOAAgAAAAWAP7/AAAOAAgAAAAWAP//AAAOAAgAAAAXAP7/AAAOAAgAAAAXAP//AAAOAAgAAAAYAP7/AAAOAAgAAAAYAP//AAAOAAgAAAAZAP7/AAAOAAgAAAAZAP//AAAOAAgAAAAaAP7/AAAOAAgAAAAaAP//AAAOAAgAAAAbAP7/AAAOAAgAAAAbAP//AAAOAAgAAAAcAP7/AAAOAAgAAAAcAP//AAAOAAgAAAAdAP7/AAAOAAgAAAAdAP//AAAOAAgAAAAeAP7/AAAOAAgAAAAeAP//AAAOAAgAAAAfAP7/AAAOAAgAAAAfAP//AAAOAAgAAAAgAP7/AAAOAAgAAAAgAP//AAAOAAgAAAAhAP7/AAAOAAgAAAAhAP//AAAOAAgAAAAiAP7/AAAOAAgAAAAiAP//AAAOAAgAAAAjAP7/AAAOAAgAAAAjAP//AAAOAAgAAAAkAP7/AAAOAAgAAAAkAP//AAAOAAgAAAAlAP7/AAAOAAgAAAAlAP//AAAOAAgAAAAmAP7/AAAOAAgAAAAmAP//AAAOAAgAAAAnAP7/AAAOAAgAAAAnAP//AAAOAAgAAAAoAP7/AAAOAAgAAAAoAP//AAAOAAgAAAApAP7/AAAOAAgAAAApAP//AAAOAAgAAAAqAP7/AAAOAAgAAAAqAP//AAAOAAgAAAArAP7/AAAOAAgAAAArAP//AAAOAAgAAAAsAP7/AAAOAAgAAAAsAP//AAAOAAgAAAAtAP7/AAAOAAgAAAAtAP//AAAOAAgAAAAuAP7/AAAOAAgAAAAuAP//AAAOAAgAAAAvAP7/AAAOAAgAAAAvAP//AAAOAAgAAAAwAP7/AAAOAAgAAAAwAP//AAAOAAgAAAAxAP7/AAAOAAgAAAAxAP//AAAOAAgAAAAyAP7/AAAOAAgAAAAyAP//AAAOAAgAAAAzAP7/AAAOAAgAAAAzAP//AAAOAAgAAAA0AP7/AAAOAAgAAAA0AP//AAAOAAgAAAA1AP7/AAAOAAgAAAA1AP//AAAOAAgAAAA2AP7/AAAOAAgAAAA2AP//AAAOAAgAAAA3AP7/AAAOAAgAAAA3AP//AAAOAAgAAAA4AP7/AAAOAAgAAAA4AP//AAAOAAgAAAA5AP7/AAAOAAgAAAA5AP//AAAOAAgAAAA6AP7/AAAOAAgAAAA6AP//AAAOAAgAAAA7AP7/AAAOAAgAAAA7AP//AAAOAAgAAAA8AP7/AAAOAAgAAAA8AP//AAAOAAgAAAA9AP7/AAAOAAgAAAA9AP//AAAOAAgAAAA+AP7/AAAOAAgAAAA+AP//AAAOAAgAAAA/AP7/AAAOAAgAAAA/AP//AAAOAAgAAABAAP7/AAAOAAgAAABAAP//AAAOAAgAAABBAP7/AAAOAAgAAABBAP//AAAOAAgAAABCAP7/AAAOAAgAAABCAP//AAAOAAgAAABDAP7/AAAOAAgAAABDAP//AAAOAAgAAABEAP7/AAAOAAgAAABEAP//AAAOAAgAAABFAP7/AAAOAAgAAABFAP//AAAOAAgAAABGAP7/AAAOAAgAAABGAP//AAAOAAgAAABHAP7/AAAOAAgAAABHAP//AAAOAAgAAABIAP7/AAAOAAgAAABIAP//AAAOAAgAAABJAP7/AAAOAAgAAABJAP//AAAOAAgAAABKAP7/AAAOAAgAAABKAP//AAAOAAgAAABLAP7/AAAOAAgAAABLAP//AAAOAAgAAABMAP7/AAAOAAgAAABMAP//AAAOAAgAAABNAP7/AAAOAAgAAABNAP//AAAOAAgAAABOAP7/AAAOAAgAAABOAP//AAAOAAgAAABPAP7/AAAOAAgAAABPAP//AAAOAAgAAABQAP7/AAAOAAgAAABQAP//AAAOAAgAAABRAP7/AAAOAAgAAABRAP//AAAOAAgAAABSAP7/AAAOAAgAAABSAP//AAAOAAgAAABTAP7/AAAOAAgAAABTAP//AAAOAAgAAABUAP7/AAAOAAgAAABUAP//AAAOAAgAAABVAP7/AAAOAAgAAABVAP//AAAOAAgAAABWAP7/AAAOAAgAAABWAP//AAAOAAgAAABXAP7/AAAOAAgAAABXAP//AAAOAAgAAABYAP7/AAAOAAgAAABYAP//AAAOAAgAAABZAP7/AAAOAAgAAABZAP//AAAOAAgAAAA=")

[node name="Player" parent="." index="3"]
position = Vector2(40, -32)

[node name="DinoSpawn" type="Node" parent="." index="5"]

[node name="DinoSpawn1" type="Marker2D" parent="DinoSpawn" index="0"]
position = Vector2(624, -47)

[node name="DinoSpawn2" type="Marker2D" parent="DinoSpawn" index="1"]
position = Vector2(676, -47)

[node name="DinoSpawn3" type="Marker2D" parent="DinoSpawn" index="2"]
position = Vector2(740, -47)

[node name="CrabSpawn" type="Node" parent="." index="6"]

[node name="spawn1" type="Marker2D" parent="CrabSpawn" index="0"]
position = Vector2(1410, -45)

[node name="spawn2" type="Marker2D" parent="CrabSpawn" index="1"]
position = Vector2(1362, -50)

[node name="spawn3" type="Marker2D" parent="CrabSpawn" index="2"]
position = Vector2(1314, -52)

[node name="spawn4" type="Marker2D" parent="CrabSpawn" index="3"]
position = Vector2(1244, -50)

[node name="spawn5" type="Marker2D" parent="CrabSpawn" index="4"]
position = Vector2(1170, -51)

[node name="spawn6" type="Marker2D" parent="CrabSpawn" index="5"]
position = Vector2(1211, -52)
